--- a/Desafio_Jawas/frontend/css/despieceLote.css
+++ b/Desafio_Jawas/frontend/css/despieceLote.css
@@ -6,3 +6,11 @@
     border: 1px solid #000000;
     padding: 8px;
 }
+
+#tablaInfoLotes {
+    border-collapse: collapse;
+}
+#tablaInfoLotes td, #tablaInfoLotes th {
+    border: 1px solid #000000;
+    padding: 8px;
+}
