--- a/Desafio_Jawas/frontend/css/despieceLote.css
+++ b/Desafio_Jawas/frontend/css/despieceLote.css
@@ -14,3 +14,18 @@
     border: 1px solid #000000;
     padding: 8px;
 }
+
+#tablaRecetas{
+    border-collapse: collapse;
+}
+#tablaRecetas td, #tablaRecetas th {
+    border: 1px solid #ffffff;
+    padding: 8px;
+}
+#tablaIngredientes{
+    border-collapse: collapse;
+}
+#tablaIngredientes td, #tablaIngredientes th {
+    border: 1px solid #ffffff;
+    padding: 8px;
+}
