--- a/Desafio_Jawas/frontend/css/comun.css
+++ b/Desafio_Jawas/frontend/css/comun.css
@@ -84,3 +84,13 @@
     text-decoration: none;
     color: white;
   }
+
+  button{
+    color: orange;
+    background-color: black;
+    border: 2px solid orange;
+    border-radius: 20px;
+    margin: 10px;
+    font-size: 20px; /* Ajusta el tamaño del texto del botón */
+    width: 150px;
+  }
