--- a/Desafio_Jawas/frontend/css/comun.css
+++ b/Desafio_Jawas/frontend/css/comun.css
@@ -2,7 +2,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(0, 89, 255);
+  background-color: rgba(0, 89, 255, 0.602);
 }
 
 #myVideo {
@@ -30,7 +30,8 @@ body {
   margin-top: 30px;
   margin-bottom: 30px;
   font-family: 'Arial Black', sans-serif;
-  color: rgb(28, 33, 42);
+  color: rgba(220, 255, 132, 0.855);
+
   font-size: 50px;
 }
 
@@ -49,7 +50,6 @@ body {
 .tabla-centro {
   color: rgb(15, 16, 19);
   font-size: 2em;
-
   border-radius: 0 3em 3em 0;
   border-right: 4px solid  rgb(91, 148, 255);
   border-top: 4px solid  rgb(91, 148, 255);
@@ -60,13 +60,12 @@ body {
   display: flex;
   justify-content: center;
   background-color:rgba(220, 255, 132, 0.494);
-  width: 50%;
+  width: 60%;
   margin: auto;
 }
 
 .tabla-centro td,
 .tabla-centro th {
-  border-radius: 0 3em 3em 0;
   border: 4px solid  rgba(10, 40, 5, 0.391);
   padding: 10px;
   -webkit-backdrop-filter: blur(10px);
@@ -75,5 +74,89 @@ body {
 
 .tabla-centro tbody td {
   background-color:  rgba(178, 218, 148, 0.432);
-
 }
+
+#navbarComponentes {
+  background-color: rgb(91, 148, 255);
+  border-radius: 50px;
+  padding: 10px 20px;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  cursor: pointer;
+}
+
+#btnModalComponentes {
+position: relative;
+left: 680px;
+margin-bottom:60px;
+}
+
+button#btnUser {
+  background-color: rgb(178, 218, 148);
+  border-radius: 50px;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 16px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  
+}
+
+button#btnUser:hover {
+  background-color: rgb(51, 90, 180);
+  box-shadow: 0 15px 20px rgba(134, 141, 215, 0.4);
+}
+a{
+  color: rgb(0, 136, 255);
+  text-decoration: none;
+}
+
+.tabla-centro-usuarios {
+  color: rgb(15, 16, 19);
+  font-size: 2em;
+  border-radius: 0 3em 3em 0;
+  border-right: 4px solid  rgb(91, 148, 255);
+  border-top: 4px solid  rgb(91, 148, 255);
+  border-bottom: 4px solid rgb(91, 148, 255);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  background-color:rgba(220, 255, 132, 0.494);
+  width: 80%;
+  margin: auto;
+}
+
+.tabla-centro-usuarios td,
+.tabla-centro-usuarios th {
+  border: 4px solid  rgba(10, 40, 5, 0.391);
+  padding: 10px;
+  -webkit-backdrop-filter: blur(10px);
+  background-color:  rgba(115, 146, 91, 0.753);
+}
+
+.tabla-centro-usuarios tbody td {
+  background-color:  rgba(178, 218, 148, 0.432);
+}
+
+input{
+  background-color: rgb(178, 218, 148);
+  border-radius: 50px;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 16px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+
+
+
