--- a/Desafio_Jawas/frontend/css/comun.css
+++ b/Desafio_Jawas/frontend/css/comun.css
@@ -63,7 +63,6 @@ body {
   padding: 1em;
   display: flex;
   justify-content: center;
-
   width: 60%;
   margin: auto;
 }
@@ -94,6 +93,7 @@ body {
   margin-bottom: 60px;
 }
 
+
 button#btnUser {
   background-color: rgb(178, 218, 148);
   border-radius: 50px;
@@ -113,6 +113,7 @@ button#btnUser:hover {
   background-color: rgb(51, 90, 180);
   box-shadow: 0 15px 20px rgba(134, 141, 215, 0.4);
 }
+
 
 a {
   color: rgb(0, 136, 255);
@@ -156,6 +157,34 @@ a {
   background-color: rgba(178, 218, 148, 0.8);
 }
 
+.tabla-centro-lotes {
+  color: rgb(15, 16, 19);
+  font-size: 2em;
+  border-radius: 0 3em 3em 0;
+  border-right: 4px solid rgb(91, 148, 255);
+  border-top: 4px solid rgb(91, 148, 255);
+  border-bottom: 4px solid rgb(91, 148, 255);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+}
+
+.tabla-centro-lotes td,
+.tabla-centro-lotes th {
+  border: 4px solid rgba(10, 40, 5, 0.391);
+  padding: 10px;
+  -webkit-backdrop-filter: blur(10px);
+  background-color: rgba(115, 146, 91, 0.97);
+}
+
+.tabla-centro-lotes tbody td {
+  background-color: rgba(178, 218, 148, 0.683);
+}
+
 input {
   background-color: rgb(178, 218, 148);
   border-radius: 50px;
@@ -170,6 +199,9 @@ input {
 }
 
 #tablaUsuarios {
+  font-size: 20px;
+}
+#tablaLotes {
   font-size: 20px;
 }
 ::placeholder { 
