--- a/Desafio_Jawas/frontend/css/comun.css
+++ b/Desafio_Jawas/frontend/css/comun.css
@@ -72,11 +72,11 @@ body {
   border: 4px solid rgba(10, 40, 5, 0.391);
   padding: 10px;
   -webkit-backdrop-filter: blur(10px);
-  background-color: rgba(115, 146, 91, 0.97);
+  background-color:rgb(178, 218, 148);
 }
 
 .tabla-centro tbody td {
-  background-color: rgba(178, 218, 148, 0.683);
+  background-color:rgba(178, 218, 148, 0.802);
 }
 
 #navbarComponentes {
@@ -150,11 +150,11 @@ a {
   border: 4px solid rgba(10, 40, 5, 0.391);
   padding: 10px;
   -webkit-backdrop-filter: blur(10px);
-  background-color: rgba(115, 146, 91, 0.864);
+  background-color: rgb(178, 218, 148);
 }
 
 .tabla-centro-usuarios tbody td {
-  background-color: rgba(178, 218, 148, 0.8);
+  background-color: rgba(178, 218, 148, 0.802);
 }
 
 .tabla-centro-lotes {
@@ -178,11 +178,11 @@ a {
   border: 4px solid rgba(10, 40, 5, 0.391);
   padding: 10px;
   -webkit-backdrop-filter: blur(10px);
-  background-color: rgba(115, 146, 91, 0.97);
+  background-color: rgb(178, 218, 148);
 }
 
 .tabla-centro-lotes tbody td {
-  background-color: rgba(178, 218, 148, 0.683);
+  background-color:rgba(178, 218, 148, 0.802); 
 }
 
 input {
@@ -207,4 +207,70 @@ input {
 ::placeholder { 
   color: rgba(255, 255, 255, 0.784);
   
+}
+
+.tabla-centro-inventario {
+  color: rgb(15, 16, 19);
+  font-size: 25px;
+  border-radius: 0 3em 3em 0;
+  border-right: 4px solid rgb(91, 148, 255);
+  border-top: 4px solid rgb(91, 148, 255);
+  border-bottom: 4px solid rgb(91, 148, 255);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+}
+
+.tabla-centro-inventario td,
+.tabla-centro-inventario th {
+  border: 4px solid rgba(10, 40, 5, 0.391);
+  padding: 10px;
+  -webkit-backdrop-filter: blur(10px);
+  background-color:  rgb(178, 218, 148);
+}
+
+.tabla-centro-inventario tbody td {
+  background-color:  rgba(178, 218, 148, 0.802);
+}
+
+button.decrease-button{
+  background-color: rgb(178, 218, 148);
+  border-radius: 50px;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 16px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin: 20px;
+}
+
+button.decrease-button:hover {
+  background-color: rgb(51, 90, 180);
+  box-shadow: 0 15px 20px rgba(134, 141, 215, 0.4);
+}
+
+button.increase-button{
+  background-color: rgb(178, 218, 148);
+  border-radius: 50px;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 16px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin: 20px;
+}
+
+button.increase-button:hover {
+  background-color: rgb(51, 90, 180);
+  box-shadow: 0 15px 20px rgba(134, 141, 215, 0.4);
 }
