--- a/Desafio_Jawas/frontend/css/comun.css
+++ b/Desafio_Jawas/frontend/css/comun.css
@@ -379,3 +379,33 @@ outline: none;
 text-align: center;
 }
 
+.tabla-centro-recetas {
+  color: rgb(15, 16, 19);
+  font-size: 2em;
+  border-radius: 2em 2em 2em 2em;
+  border-right: 4px solid rgb(91, 148, 255);
+  border-top: 4px solid rgb(91, 148, 255);
+  border-bottom: 4px solid rgb(91, 148, 255);
+  border-left: 4px solid rgb(91, 148, 255);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  margin: auto;
+}
+
+.tabla-centro-recetas td,
+.tabla-centro-recetas th {
+  border: 4px solid rgba(10, 40, 5, 0.391);
+  padding: 10px;
+  -webkit-backdrop-filter: blur(10px);
+  background-color: rgb(178, 218, 148);
+}
+
+.tabla-centro-recetas tbody td {
+  background-color: rgba(178, 218, 148, 0.802);
+}
+
+
